@@ -3,7 +3,7 @@
 # $Header: $
 
 EAPI=5
-PYTHON_COMPAT=( python{2_7,3_3,3_4} )
+PYTHON_COMPAT=( python2_7 )
 
 inherit distutils-r1 versionator eutils
 
@@ -11,11 +11,10 @@ MY_PV=$(replace_version_separator 1 '-')
 
 DESCRIPTION="Support for handling directories per XDG Base Directory and User Folders specifications"
 HOMEPAGE="https://launchpad.net/u1db"
-SRC_URI="https://launchpad.net/${PN}/stable-${MY_PV}/${PV}/+download/${PN}-${PV}.tar.gz"
-
-LICENSE="LGPL-3"
-SLOT="0"
+LICENSE=LGPL-3
 KEYWORDS="~amd64 ~x86"
+SLOT=0
+SRC_URI="https://launchpad.net/${PN}/stable-${MY_PV}/${PV}/+download/${PN}-${PV}.tar.gz"
 
 DEPEND="${PYTHON_DEPS}"
 
